@@ -1,4 +1,4 @@
-﻿// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+﻿// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,15 +17,15 @@ namespace Castle.Windsor.Tests.Interceptors
 	using System;
 
 	using Castle.DynamicProxy;
-	using Castle.MicroKernel;
 
 	public class ReturnDefaultInterceptor : IInterceptor
 	{
 		public void Intercept(IInvocation invocation)
 		{
-			if (invocation.Method.ReturnType.IsValueType)
+			var returnType = invocation.Method.ReturnType;
+			if (returnType.IsValueType && returnType != typeof(void))
 			{
-				invocation.ReturnValue = Activator.CreateInstance(invocation.Method.ReturnType);
+				invocation.ReturnValue = Activator.CreateInstance(returnType);
 			}
 		}
 	}
